# homelab

./: .gitignore  README.md  Vagrantfile  ansible.cfg  docker-compose.dev.yml  docker-compose.yml  mise.toml  requirements.txt
ansible/: README.md  ansible.cfg  inventory.yml  playbook.yml  requirements.yml
gl/: .dockerignore  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json
gl/migrations/: 20250926002206_create_base_table.sql  20250926003137_use_timestamp_for_archived_at.sql  20250926003138_allow_null_position_for_archive_entry.sql  20250926003139_make_category_name_unique.sql
gl/rust/: Cargo.toml
gl/rust/src/: main.rs
gl/rust/src/database/: constants.rs  mod.rs
gl/rust/src/handlers/: category.rs  grocery.rs
gl/rust/src/models/: category.rs  grocery_entry.rs  grocery_item.rs  grocery_list_entry.rs  mod.rs
gl/src/: main.rs
gl/src/database/: constants.rs  mod.rs
gl/src/handlers/: grocery.rs  mod.rs
gl/src/models/: category.rs  grocery_entry.rs
gl/ts/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
gl/ts/src/: App.tsx  index.css
gl/ts/src/components/: Category.tsx  Console.tsx  GroceryItem.tsx  GroceryList.tsx  SortableCategory.tsx  SortableGroceryItem.tsx
gl/ts/src/hooks/: useCategories.ts  useGroceryList.ts
gl/ts/src/types/: category.ts  grocery.ts
gl/ts/src/utils/cmd/: exec.ts  parser.ts
image_update_webhook/: Cargo.toml  Dockerfile
image_update_webhook/src/: main.rs
nginx/: Dockerfile  default.conf
smallweb/: Dockerfile
static/: sites_manifest
volume_backup/: Dockerfile  (+2 more)
(+88 files in other folders)
